# ollama-langchain

./: README.md
gartner-rag/: gartner_markets_urls.txt  markets-and-products.csv  part_gartner_markets_urls.txt  pyproject.toml  requirements.txt  run-rag.py  run_rag.py  webrag.py
gartner-rag/chroma_db/: chroma.sqlite3
