[tool.poetry]
name = "langrag"
version = "0.1.0"
description = ""
authors = ["Wes Spinks <wes@redhat.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<=3.11"
chromadb = "*"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
fastembed = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
