[tool.poetry]
name = "langrag"
version = "0.1.1"
description = ""
authors = ["Wes Spinks <wes@redhat.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<=3.11"
chromadb = "*"
langchain = "^0.1.13"
langchain-community = "^0.0.29"
fastembed = "*"
scikit-learn = "^1.4.1.post1"
ollama = "^0.1.8"
beautifulsoup4 = "^4.12.3"
unstructured = "^0.12.6"
pandas = "^2.2.1"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"